2003-09-19  Christopher Armstrong  <radix@twistedmatrix.com>

	* twisted/names/authority.py twisted/test/test_names.py
	twisted/protocols/dns.py: Client and server support for TTLs on
	all records. All Record_* types now take a ttl= keyword
	argument. You can pass the ttl= argument to all the record classes
	in your pyzones, too.

2003-09-19  Moshe Zadka <moshez@twistedmatrix.com>

	* twisted/application/__init__.py twisted/application/app.py
        twisted/application/compat.py twisted/application/internet.py
        twisted/application/service.py twisted/scripts/twistd.py
        twisted/scripts/twistw.py twisted/scripts/mktap.py
        twisted/scripts/tapconvert.py bin/twistw: Update to new-style
	applications.

2003-09-19  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted/names/client.py: Instantiation of theResolver global made
	lazy.  As a result importing it directly will now fail if it has not
	yet been created.  It should not be used directly anymore; instead,
	use the module-scope lookup methods, or instantiate your own
	resolver.

	* twisted/mail/relaymanager.py: Instantiation of MXCalculator made
	lazy.

2003-09-18  Stephen Thorne  <stephen@thorne.id.au>

	* twisted/web/distrib.py: Removed dependancy on twisted.web.widgets, and
	instead using woven.

2003-09-18  Stephen Thorne  <stephen@thorne.id.au>

	* doc/howto/woven-reference.html: Added this new documentation file.
	* doc/howto/index.html: Added woven-reference to index
	* admin/: Added woven-reference.tex to book.tex

2003-09-18  Stephen Thorne  <stephen@thorne.id.au>

	* twisted/web/woven/widgets.py: Stop the 'Option' widget from having a
    name="" attribute. Closes issue255.

2003-09-16  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 1.0.8alpha1.

	* .: Releasing Twisted 1.0.8alpha2 (Fixed Debian packages).

2003-09-13  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 1.0.7 (no code changes since 1.0.7rc1).
