@@ -1,3 +1,7 @@
+2003-9-18  Moshe Zadka <moshez@twistedmatrix.com>
+
+	* twisted/web/spider.py: removed, it was unmaintained.
+
 2003-09-19  Christopher Armstrong  <radix@twistedmatrix.com>
 
 	* twisted/names/authority.py twisted/test/test_names.py
